--- a/eQueue/eQueue-war/web/kitchenManagement.xhtml
+++ b/eQueue/eQueue-war/web/kitchenManagement.xhtml
@@ -48,7 +48,7 @@
         <p:layout>
             <p:poll interval="5" listener="#{kitchenManagementManagedBean.retrieveIncompleteOrders}" update="formOrdersOverview formCurrentDayOrders"></p:poll>
 
-            <p:layoutUnit minSize="300" position="west"  header="Kitchen Overview" collapsible="true">
+            <p:layoutUnit minSize="300" position="west"  header="Kitchen Overview" collapsible="true" resizable="true">
                 <h:form id="formOrdersOverview">
 
                     <p:panelGrid style="width:300px; margin:10 5 0 5">
