toggle margin fixed

--- a/eQueue/eQueue-war/web/menuManagement.xhtml
+++ b/eQueue/eQueue-war/web/menuManagement.xhtml
@@ -436,7 +436,7 @@
                         </f:facet>
 
                         <h:form id="toggleButtonSidePanelCategory">
-                            <p:commandButton style="margin: 0px 5px 5px 5px;" value="Toggle Panel" onclick="PF('layoutWdgt').toggle('west')" update="toggleButtonSidePanelCategory" />
+                            <p:commandButton value="Toggle Panel" onclick="PF('layoutWdgt').toggle('west')" update="toggleButtonSidePanelCategory" />
                         </h:form>
 
                         <h:form id="formAllMenuCategories">
