--- a/eQueue/eQueue-war/web/kitchenManagement.xhtml
+++ b/eQueue/eQueue-war/web/kitchenManagement.xhtml
@@ -125,7 +125,7 @@
 
                             <div style="min-height: 150px">
                                 <p:dataTable id="orderLineItemsTable" rowIndexVar="index" value="#{order.orderLineItems}" var="item" scrollable="true" scrollHeight="100"
-                                             rowKey="#{item.orderLineItemId}" selection="#{kitchenManagementManagedBean.selectedOrderItem}" selectionMode="single">
+                                             rowKey="#{item.orderLineItemId}" selection="#{kitchenManagementManagedBean.selectedOrderItem}" onRowClick="#{kitchenManagementManagedBean.selectOrder(order)}" selectionMode="single">
                                     <p:ajax event="contextMenu" update="formViewOrderLineItem" />
                                     <p:column headerText="Idx" style="width: 15px; text-align: center;">
                                         <h:outputText value="#{index + 1}" />
@@ -164,7 +164,7 @@
                             </div>
 
                             <p:contextMenu for="orderLineItemsTable">
-                                <p:menuitem value="View" update="formViewOrderLineItem" icon="pi pi-search" oncomplete="PF('dialogViewOrderLineItem').show()"/>
+                                <p:menuitem value="View" update="formViewOrderLineItem" icon="pi pi-search"  oncomplete="PF('dialogViewOrderLineItem').show()"/>
                                 <p:menuitem value="Edit" update="formUpdateOrderLineItem" icon="pi pi-pencil" oncomplete="PF('dialogUpdateOrderLineItem').show()"/>
                             </p:contextMenu>
                             <div style="min-height: 40px">
@@ -326,7 +326,9 @@
                             <p:row>
                                 <p:column colspan="2">
                                     <div style="text-align: center;">
-                                        <p:commandButton value="Update" update="@form formOrdersOverview formCurrentDayOrders infoGrowl" actionListener="#{kitchenManagementManagedBean.updateOrderLineItem}" oncomplete="PF('dialogUpdateOrderLineItem').show();" />
+                                        <p:commandButton value="Update" update="@form formOrdersOverview formCurrentDayOrders infoGrowl" actionListener="#{kitchenManagementManagedBean.updateOrderLineItem}" oncomplete="PF('dialogUpdateOrderLineItem').show();" >
+                                          
+                                        </p:commandButton>
                                         <p:commandButton value="Close" oncomplete="PF('dialogUpdateOrderLineItem').hide();" />
                                     </div>
                                 </p:column>
