--- a/eQueue/eQueue-war/web/employeeProfilePage.xhtml
+++ b/eQueue/eQueue-war/web/employeeProfilePage.xhtml
@@ -66,7 +66,7 @@
                     <f:facet name="header">
                         <p:row>
                             <p:column colspan="2" style="font-size: large; padding: 10px">
-                                #{employeeProfilePageManagedBean.currentEmployee.lastName} #{employeeProfilePageManagedBean.currentEmployee.firstName}'s Profile Page
+                                #{employeeProfilePageManagedBean.currentEmployee.firstName} #{employeeProfilePageManagedBean.currentEmployee.lastName}'s Profile Page
                             </p:column>
                         </p:row>
                     </f:facet>
